--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,5 +1,5 @@
 .TodoApp {
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
     color: #222;
     display: flex;
     flex-direction: column;
